chore: address PR comments